--- a/documentation/index.html
+++ b/documentation/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="index.html" />
   <!-- Page Title
     ======================================== -->
-  <title>Funto - Next js NFT Marketplace Next js Template</title>
+  <title>RC:RP - Openmp Việt Nam Next js Template</title>
 
   <!-- Favicon -->
   <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.ico" /> -->
@@ -61,7 +61,7 @@
                   width="155"
                   height="36"
                 /> -->
-              <span style="font-size: 50px; font-weight: 700; font-family: Jost;">Funto.</span>
+              <span style="font-size: 50px; font-weight: 700; font-family: Jost;">RC:RP.</span>
 
             </a>
           </div>
@@ -100,7 +100,7 @@
                       <li>
                         <a href="#">
 
-                          <strong>Item Name : </strong> Funto - Next js NFT Marketplace Next js Template
+                          <strong>Item Name : </strong> RC:RP - Openmp Việt Nam Next js Template
                         </a>
                       </li>
                       <li><strong>Created: </strong> 15 June 2024</li>
@@ -126,7 +126,7 @@
                   <section id="introduction">
                     <h2>Introduction</h2>
                     <h4 class="title">
-                      Funto - Next js NFT Marketplace Next js Template
+                      RC:RP - Openmp Việt Nam Next js Template
                     </h4>
                     <div class="top-support">
                       For any support please don't hesitate to contact us at
@@ -135,7 +135,7 @@
                       customers.
                     </div>
                     <p>
-                      We would like to thank you for choosing <b>Funto</b>.
+                      We would like to thank you for choosing <b>RC:RP</b>.
                     </p>
                   </section>
                   <!-- End of #getting_started -->
@@ -159,7 +159,7 @@
                       <h2>Requirements</h2>
                       <p>
                         There are system requirements in order to install and
-                        setup <b>Funto</b> template and its components properly.
+                        setup <b>RC:RP</b> template and its components properly.
                         Make sure that you are installed
                         <strong>node.js</strong> and <strong>Yarn</strong>.
                       </p>
@@ -219,9 +219,9 @@
                   <section id="what_included">
                     <h3>What's Included</h3>
                     <p>
-                      After purchasing Funto template on themeforest.net
+                      After purchasing RC:RP template on themeforest.net
                       with your Envato account, go to your Download page. You
-                      can choose to download Funto template package which
+                      can choose to download RC:RP template package which
                       contains the following files:
                     </p>
                     <figure>
@@ -234,7 +234,7 @@
                     <div class="steps-panel">
                       <ul class="ordered-list">
                         <li>
-                          <strong>Funto</strong> - A  NFT Marketplace
+                          <strong>RC:RP</strong> - A  NFT Marketplace
                           file. this file you can edit and use for your
                           business.
                         </li>
@@ -324,7 +324,7 @@
                   <section id="change_site_title_and_favicon">
                     <h3>Change Site Title, Favicon and Page Title</h3>
                     <p>
-                      To change your Site title and Favicon open the Funto
+                      To change your Site title and Favicon open the RC:RP
                       in your editor and go to the location by following
                       screenshot which are given bellow.
                     </p>
